Fixed the language menu alignment

--- a/ceno-client/portal/css/nav.css
+++ b/ceno-client/portal/css/nav.css
@@ -51,6 +51,9 @@
 
 #languageName {
   color: white;
+  height: 100%;
+  padding: 0;
+  line-height: 80px;
 }
 
 #languageName:hover {
